--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "music-events"
 version = "0.1.0"
-description = "Simple \"todo\""
+description = "Music events manager"
 authors = ["alordash"]
 license = ""
 repository = ""
@@ -13,6 +13,7 @@ rust-version = "1.59"
 tauri-build = { version = "1.2.1", features = [] }
 
 [dependencies]
+music_events_lib = { path = "./libs/music_events_lib" }
 serde_json = { version = "1.0", features = ["arbitrary_precision"] }
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.2.2", features = [] }
